# Peacock

./: .cirrus.yml  .editorconfig  .eslintignore  .eslintrc.js  .gitattributes  .gitignore  .nvmrc  .oxfmtrc.json  .prettierignore  .yarnrc.yml  CODE_OF_CONDUCT.md  Dockerfile  README.md  Start Server.cmd  THIRDPARTYNOTICES.txt  entrypoint.sh  eslint.config.cjs  package.json  readme.md  tsconfig.json  webstorm.config.js
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
archipelago-ui/: .gitignore  index.html  package.json  tsconfig.json  vite.config.ts
components/: autoUpdate.ts  cli.ts  commandService.ts  configManager.ts  configSwizzleManager.ts  controller.ts  databaseHandler.ts  delegation.ts  discordRp.ts  entitlementStrategies.ts  eventHandler.ts  evergreen.ts  flags.ts  generatedPeacockRequireTable.ts  hooksImpl.ts  hotReloadService.ts  index.ts  inventory.ts  loadouts.ts  loggingInterop.ts  menuData.ts  oauthToken.ts  officialServerAuth.ts  ownership.ts  platformEntitlements.ts  playStyles.ts  profileHandler.ts  scoreHandler.ts  sessionSerialization.ts  smfSupport.ts  socketActivation.ts  tools.ts  unlockables.ts  utils.ts  webFeatures.ts
docs/: CODE_OF_CONDUCT.md  ESCALATION_GUIDELINES.md  SECURITY.md  (+1 more)
patcher-darwin/: CMakeLists.txt
patcher-darwin/src/: log.h  main.cpp  memory.cpp  memory.h  patcher.cpp  patcher.h  patches.cpp  patches.h  process.cpp  process.h  scanner.cpp  scanner.h  settings.cpp  settings.h  version.cpp  version.h
patcher-darwin/src/patch_definitions/: definitions.h  v3_260_1.cpp  v3_270_1.cpp
(+2219 files in other folders)
